2000-02-14  Adam Fedor  <fedor@gnu.org>

	* Version: Update version number
	* Documentation/announce.tmpl.texi: Update
	* Documentation/readme.tmpl.texi: Likewise.
	* Documentation/news.tmpl.texi: Likewise.
	* Documentation/todo.tmpl.texi: Likewise.
	* ANNOUNCE, BUGS, NEWS, README: Regenerate

Fri Feb 11 06:27:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSZone.m: Tidied indentation etc to GNU style.

Thu Feb 10 23:01:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSDebug.m: Patch by David Relson to change memory allocation
	report and add thread-safety.  Modified by me to automatically use
	locking if necessary, to tidy up, and to fix a couple of bugs in
	lock/unlock sequencing.  All new stuff - but since the previous
	version was completely unusable in a multithreaded environment I
	don't think we are running any risk by adding this here.

Thu Feb 10 15:00:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Changes to fix possible crashes where task completion notifications
	are sent at inappropriate times due to SIGCHLD.
	* Source/NSTask.m: Move signal handler code to GSChecktasks() and
	have the signal handler simply set a flag to say work needs doing.
	* Source/NSRunLoop.m: Add calls to GSCheckTasks() so that we notice
	the death of a child.

Thu Feb 10 14:13:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/UnixFileHandle.m: ([-receivedEvent:type:extra: forMode:])
	fix so that incoming connections are closed when their file handle
	is deallocated.

Thu Feb 10  9:34:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/gnustep/base/preface.h.in: Added tests to see if _C_LNG_LNG
	and _C_ULNG_LNG are defined in the objc compiler headers and, if not,
	define them.  Long long support was added in gcc 2.8 (minimum
	compiler version recommended for GNUstep), but the defines were
	missing from the headers :-(